# glModelLab

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  imgui.ini
Shaders/lighting/: lighting.fs  lighting.vs
Shaders/shadow/: shadow.fs
Shaders/simple/: simple.fs  simple.vs
include/: basic.hpp  camera.hpp  lights.hpp  main.hpp  manager.hpp  mesh.hpp  model.hpp  myerr.hpp  renderer.hpp  shader.hpp  shadow.hpp
shaders/No_Lights/: render.frag  render.vert
shaders/Simple_Shadow/: render.frag  render.vert
shaders/With_Lights/: render.frag  render.vert
shaders/shadow/: shadow.vs
shaders/simple/: simple.fs
src/: basic.cpp  camera.cpp  lights.cpp  main.cpp  manager.cpp  mesh.cpp  model.cpp  myerr.cpp  renderer.cpp  shader.cpp  shadow.cpp
